--- a/Final_Year_Implementation/templates/signin.html
+++ b/Final_Year_Implementation/templates/signin.html
@@ -342,7 +342,7 @@ footer span:hover {
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 <script>
   const firebaseConfig = {
-    apiKey: "AIzaSyABQQ8jOO8pR17rfVe64G-_elusiNbKnNg",
+    apiKey: "",
     authDomain: "login-signup-7fcd7.firebaseapp.com",
     projectId: "login-signup-7fcd7",
     storageBucket: "login-signup-7fcd7.appspot.com",
