--- a/Final_Year_Implementation/templates/heart.html
+++ b/Final_Year_Implementation/templates/heart.html
@@ -803,7 +803,7 @@ chatbox.display();
       var jitterInterval = setInterval(jitterIcon, 2000); 
     
       const firebaseConfig = {
-    apiKey: "AIzaSyAWA78ESrFGo0W1g-PhUSymBCaas5mHnQ4",
+    apiKey: "",
     authDomain: "data-66a83.firebaseapp.com",
     projectId: "data-66a83",
     storageBucket: "data-66a83.appspot.com",
